20250724#D2: web summary using Ollama local model

--- a/Env. Setup.ipynb
+++ b/Env. Setup.ipynb
@@ -35,6 +35,24 @@
     "\n",
     "    ```plaintext\n",
     "    OPENAI_API_KEY=your_openai_api_key_from_openai.com\n",
+    "    ```\n",
+    "\n",
+    "6. Install Ollama model locally in docker environment: Ref. [Ollama Docker Image](https://hub.docker.com/r/ollama/ollama)\n",
+    "\n",
+    "    ```bash\n",
+    "    docker run -p 11434:11434 ollama/ollama:latest\n",
+    "\n",
+    "    #After installation, run below command to pull the model\n",
+    "    docker exec -it ollama ollama run llama3\n",
+    "\n",
+    "    ```\n",
+    "    \n",
+    "7. While running day 2 notebook, faced issue with ollama3.2 model, as it was deployed in the docker container and was giving error. So, to fix the issue below step was taken:\n",
+    "\n",
+    "    ```bash\n",
+    "    docker exec -it ollama ollama pull llama3.2\n",
+    "    docker exec -it db07d8cdd444 bash\n",
+    "    ollama pull llama3.2\n",
     "    ```"
    ]
   }
