20250731#Added documentation and notes

--- a/Env. Setup.ipynb
+++ b/Env. Setup.ipynb
@@ -52,7 +52,7 @@
     "    ```bash\n",
     "    docker exec -it ollama ollama pull llama3.2\n",
     "    docker exec -it db07d8cdd444 bash\n",
-    "    ollama pull llama3.2\n",
+    "    [bash] ollama pull llama3.2\n",
     "    ```"
    ]
   }
