20250731#Added user input for question (week 1 - script)

--- a/week-1/week1.excercise.ipynb
+++ b/week-1/week1.excercise.ipynb
@@ -66,6 +66,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "646e8a80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ALeternative way to get user input\n",
+    "question = input(\"Please enter your question:\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "2fe4c58f",
    "metadata": {},
