20250731# Week 2 - Day 2 - exploration of Google Geminit and Anthropic Claude

--- a/Env. Setup.ipynb
+++ b/Env. Setup.ipynb
@@ -53,6 +53,18 @@
     "    docker exec -it ollama ollama pull llama3.2\n",
     "    docker exec -it db07d8cdd444 bash\n",
     "    [bash] ollama pull llama3.2\n",
+    "    ```\n",
+    "\n",
+    "8. Adding API keys to your .env file\n",
+    "\n",
+    "    When you get your API keys, you need to set them as environment variables by adding them to your .env file.\n",
+    "\n",
+    "    ```plaintext\n",
+    "    # .env file\n",
+    "    OPENAI_API_KEY=xxxx\n",
+    "    ANTHROPIC_API_KEY=xxxx\n",
+    "    GOOGLE_API_KEY=xxxx\n",
+    "    DEEPSEEK_API_KEY=xxxx\n",
     "    ```"
    ]
   }
