20250824#Code restructure, week 5 - day 1 and 2 - RAG

--- a/week-1/Day1.Excercise.ipynb
+++ b/week-1/Day1.Excercise.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "892cccac",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
    ],
    "source": [
     "# Let's try one out\n",
-    "site_text = Website(\"https://vejr.tv2.dk/live/2024-12-02-vejr-og-klima\")\n",
+    "site_text = Website(\"https://blog.stackademic.com/my-13-sources-of-income-as-a-software-engineer-1ffb7c69e4c8\")\n",
     "print(site_text.title)\n",
     "print(site_text.text)"
    ]
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4cc5ffb0",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
     }
    ],
    "source": [
-    "summarize(\"https://vejr.tv2.dk/live/2024-12-02-vejr-og-klima\")"
+    "summarize(\"https://blog.stackademic.com/my-13-sources-of-income-as-a-software-engineer-1ffb7c69e4c8\")"
    ]
   },
   {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "da6c96a1",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
     }
    ],
    "source": [
-    "display_summary(\"https://edition.cnn.com/2025/07/24/tech/intel-layoffs-15-percent-q2-earnings\")"
+    "display_summary(\"https://blog.stackademic.com/my-13-sources-of-income-as-a-software-engineer-1ffb7c69e4c8\")"
    ]
   }
  ],
